--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,16 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = devise_error_messages!
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true
-  .field
-    = f.label :password
-    - if @validatable
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "off"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "off"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.col-md-4
+  .login-panel.panel.panel-default
+    .panel-heading
+      %h3.panel-title Sign In
+    .panel-body
+      = form_for(resource, as: resource_name, url: registration_path(resource_name), role: 'form') do |f|
+        = devise_error_messages!
+        %fieldset
+          .form-group
+            = f.email_field :email, autofocus: true, placeholder: "E-mail", class: 'form-control'
+          .form-group
+            = f.password_field :password, autocomplete: 'off', placeholder: "Password", class: 'form-control'
+          .form-group
+            = f.password_field :password_confirmation, auotcomplete: 'off', placeholder: 'password confirmation', class: 'form-control'
+          = f.submit "Sign up", class: "btn btn-sm btn-success"
+      -# = render 'devise/shared/links'
