simple working post

--- a/app/views/users/_share_user_modal.html.haml
+++ b/app/views/users/_share_user_modal.html.haml
@@ -15,4 +15,4 @@
           %br
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", :type => "button"} Close
-        = form.submit "Save changes"
+        = form.submit "Share", class: "btn btn-success"
