added validation of links

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -5,7 +5,7 @@
         %span.icon-bar
         %span.icon-bar
         %span.icon-bar
-      %a.navbar-brand{:href => "#", :target => "_blank"} Bookmarking Site
+      %a.navbar-brand{:href => user_path(current_user)} Bookmarking Site
     .collapse.navbar-collapse
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
