added flash messages for alerts

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,6 +7,13 @@
   %body
     = render 'layouts/navbar'
 
+    - if !flash.blank?
+      %div{ class: "alert alert-#{flash.keys.first} flash-messages", role: 'alert' }
+        - flash_messages(flash).each do |message|
+          %ul
+            %li
+              = message
+
     .container
       = yield
     = javascript_include_tag 'application'
