--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -18,7 +18,8 @@
 
   %hr
 
-%h1= "Wall of #{@user.username}"
+%h1
+  = current_user.id == @user.id ? "My Wall" : "Wall of #{@user.username}"
 
 - if @shared_links
   = render "users/shared_links", links: @shared_links
