--- a/app/views/users/_share_user_modal.html.haml
+++ b/app/views/users/_share_user_modal.html.haml
@@ -4,13 +4,11 @@
       .modal-header
         %button.close{"aria-label" => "Close", "data-dismiss" => "modal", :type => "button"}
           %span{"aria-hidden" => "true"} &times;
-        %h4#myModalLabel.modal-title Modal title
+        %h4#myModalLabel.modal-title Share with:
       .modal-body
-        = text_field_tag "user_names", nil, class: "form-control", placeholder: "add users to share"
-
         %hr
         - User.all.each do |user|
-          = label_tag :username do
+          %label.share-user
             = check_box_tag "shared_ids[]", user.id
             = user.username
           %br
