--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -15,7 +15,7 @@
               %strong= current_user.username
               %span.glyphicon.glyphicon-chevron-down
             %ul.dropdown-menu
-              %li= link_to "Edit Profile", "#"
+              %li= link_to "Edit Profile", edit_user_registration_path 
               %li.divider{ role: "presentation" }
               %li= link_to "Logout", destroy_user_session_path, method: :delete
           - else
