browse users page

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -9,7 +9,7 @@
     .collapse.navbar-collapse
       %ul.nav.navbar-nav
         %li
-          = link_to "See all users", "#"
+          = link_to "See all users", users_path
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown
           - if current_user
