--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,22 +1,3 @@
-%h1 Share you links
+%h1 Browse Users
 
-= form_for :links, url: users_path do |f|
-  .row
-    .col-md-6
-      = f.text_field :name, placeholder: "share your links", class: 'form-control', required: true
-    .col-md-6
-  %br
-  .row
-    .col-md-3
-      = f.submit "Post", class: "form-control btn btn-success"
-    .col-md-3
-      = link_to "Share", "#", "data-target" => "#user-tag-modal", "data-toggle" => "modal", class: "form-control btn btn-primary"
-    .col-md-6
-  = render "share_user_modal", form: f
-
-%hr
-
-%h1 Wall
-
-- if @shared_links
-  = render "shared_links", links: @shared_links
+= render @users
